Fix invalid @-moz-document scrollbar rule (missing selector)

--- a/source/css/_highlight/highlight/diff.styl
+++ b/source/css/_highlight/highlight/diff.styl
@@ -2,7 +2,8 @@ figure.highlight
   table
     // scrollbar - firefox
     @-moz-document url-prefix()
-      scrollbar-color: var(--hlscrollbar-bg) transparent
+      &
+        scrollbar-color: var(--hlscrollbar-bg) transparent
 
     &::-webkit-scrollbar-thumb
       background: var(--hlscrollbar-bg)
