--- a/source/css/_highlight/prismjs/index.styl
+++ b/source/css/_highlight/prismjs/index.styl
@@ -8,7 +8,8 @@ if $highlight_theme != false
   pre[class*='language-']
     // scrollbar - firefox
     @-moz-document url-prefix()
-      scrollbar-color: var(--hlscrollbar-bg) transparent
+      &
+        scrollbar-color: var(--hlscrollbar-bg) transparent
 
     &::-webkit-scrollbar-thumb
       background: var(--hlscrollbar-bg)
